kubernetes-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashcard-backend-service
spec:
  selector:
    app: flashcard-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
