kubernetes-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flashcard-frontend-service
spec:
  selector:
    app: flashcard-frontend  
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
